<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/height_width_10dp"
                app:cardUseCompatPadding="true">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TableRow android:gravity="start"
                        android:background="@color/mainheadbg">

                        <TextView
                            android:text="@string/infoname"
                            style="@style/txtFeatureName"/>

                        <TextView
                            android:text="@string/Results"
                            style="@style/txtFeatureStatus"/>

                    </TableRow>


                    <TableRow android:gravity="start"
                        android:background="@color/white">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_countdown" />

                        <TextView
                            android:text="@string/VehicleNumber"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv1"
                            style="@style/txtfeatureStyle"/>



                    </TableRow>


                    <TableRow android:gravity="start"
                        android:background="@color/sectabrow">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_owner" />

                        <TextView
                            android:text="@string/AbsoluteOwner"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv2"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>


                    <TableRow android:gravity="start"
                        android:background="@color/white">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_car" />

                        <TextView
                            android:text="@string/EngineNo"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv3"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>


                    <TableRow android:gravity="start"
                        android:background="@color/sectabrow">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_exam" />

                        <TextView
                            android:text="@string/ClassOfVehicle"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv4"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>


                    <TableRow android:gravity="start"
                        android:background="@color/white">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_shoe_making" />

                        <TextView
                            android:text="@string/Make"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv5"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>
                    <TableRow android:gravity="start"
                        android:background="@color/sectabrow">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic__d_modeling" />

                        <TextView
                            android:text="@string/Model"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv6"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>
                    <TableRow android:gravity="start"
                        android:background="@color/white">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_calendar" />

                        <TextView
                            android:text="@string/YearOfManufacture"
                            style="@style/txtfeatureNameStyle"/>

                        <TextView
                            android:id="@+id/tv7"
                            style="@style/txtfeatureStyle"/>

                    </TableRow>


                </TableLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>